# AgenticResumeJudge

./: .gitignore  README.md  config.py  main.py  orchestrator.py  pyproject.toml  requirements.txt  state.py
agents/: auditor.py  constructor.py  enthusiast.py  skeptic.py
core/: llm.py  schemas.py
data/: sample_jd.txt
database/: driver.py
src/agenticresume/: __init__.py  settings.py
src/agenticresume/domain/: models.py
