[project]
name = "agenticresume"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Xerass", email = "mapa.jomarjake.dagmil@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "langchain-core>=1.5.0",
    "langchain-google-genai>=4.2.7",
    "langgraph>=1.2.9",
    "neo4j>=6.2.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "pypdf>=6.14.2",
    "typer>=0.27.0",
]

[project.scripts]
agenticresume = "agenticresume:main"

[build-system]
requires = ["uv_build>=0.11.30,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=2.3.0",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.22",
]
